--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dependency Injection Container for Express Applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec"
   },
   "repository": {
     "type": "git",
