--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "riccardo",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Dependency Injection Container for Express Applications",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha --harmony -R spec"
   },
   "repository": {
     "type": "git",
