--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "riccardo",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Dependency Injection Container for Express Applications",
   "main": "index.js",
+  "dependencies": {
+    "callsite": "*",
+    "glob": "*"
+  },
   "scripts": {
     "test": "mocha ./test/index.js --harmony -R spec"
   },
