팩토리를 사용하는 경우, 의존성을 충족시킬 수 없다면 오류를 발생시키도록 합니다.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riccardo",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Dependency Injection Container for Node.js",
   "main": "index.js",
   "dependencies": {
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/mintrupt/riccardo/issues"
   },
-  "homepage": "https://github.com/mintrupt/riccardo"
+  "homepage": "https://github.com/mintrupt/riccardo",
+  "devDependencies": {
+    "mocha": "*"
+  }
 }
