annotate 테스트 추가, annotate 라이브러리 변경

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "riccardo",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Dependency Injection Container for Node.js",
   "main": "index.js",
   "dependencies": {
     "callsite": "*",
     "glob": "*",
-    "function-arguments": "*"
+    "get-parameter-names": "*"
   },
   "scripts": {
     "test": "mocha ./test/index.js --harmony -R spec"
