--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-  - "4"
-  - "5"
-  - "6"
-  - "6.0.0"
+  - node
+  - lts/*
+  - 10
+  - 12
+  - 14
 before_install: npm install -g mocha
